Feat : mini funny jeu

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 	<title>Programmation évènementielle </title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
 <div id="out">
 </div>
-
+<div id="infoJeu">
+</div>
 <script src="main.js"></script>
 </body>
 </html>
